[package]
name = "sds011"
version = "0.2.1"
authors = ["Vadim Manaenko <vadim.razorq@gmail.com>"]
description = "SDS011 driver"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Vourhey/nova-sds011-rs"
edition = "2018"

[[bin]]
name = "sds011"

[dependencies]
derive_more = "0.99"
serialport = { version = "3.3.0", default-features = false }
serde = { version = "1.0.106", features = ["derive"] }
csv = "1.1"

clap = "2.33.0"
